--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
 
 <section class="main-section">
+
+<h1>Marcin Mika</h1>
+
 <!--pokaz slajdów ze szczytu strony-->
 	<article class="container">
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -54,8 +57,8 @@
 	
 	<article>
 		
-		<h1>Marcin Mika</h1>
 		<h3>Front End Developer</h3>
+		<p>Jestem początkującym Front End Developerem. Mam doświadczenie w HTML, CSS, JavaScrip, które nabyłem przy robieniu projektów na BootCampie. </p>
 		
 	</article>
 	
