--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="fonts/facebook/css/font-awesome.min.css">
+	<link rel="stylesheet" href="fonts/tweeter/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   	
@@ -60,13 +62,21 @@
 		<h3>Front End Developer</h3>
 		<p>Jestem początkującym Front End Developerem. Mam doświadczenie w HTML, CSS, JavaScrip, które nabyłem przy robieniu projektów na BootCampie. </p>
 		
+		<p class="text-bold"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim similique possimus fugit minima beatae iste ut voluptatem obcaecati. Ducimus sit praesentium ex laborum deserunt. Debitis perspiciatis quidem deleniti eveniet maiores.</p>
+		
 	</article>
 	
 	</section>
 	
 	<section class="main-section">
 		
+		<article>
 		
+				<i class="fa fa-twitter" aria-hidden="true" style="font-size:60px"></i>
+				
+				<i class="fa fa-facebook" aria-hidden="true" style="font-size:60px"></i>
+		
+		</article>
 		
 	</section>
 	
