--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,82 +9,105 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="fonts/facebook/css/font-awesome.min.css">
 	<link rel="stylesheet" href="fonts/tweeter/css/font-awesome.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  	
-  
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
 </head>
+
 <body>
 
-<section class="main-section">
-
-<h1>Marcin Mika</h1>
-
-<!--pokaz slajdów ze szczytu strony-->
-	<article class="container">
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <img src="img/Marcin-Mika-foto-1.JPG" alt="Marcin-Mika-foto-1" >
-      </div>
-
-      <div class="item">
-        <img src="img/IMG_9674.JPG" alt="Marcin-Mika-foto-2" >
-      </div>
-    
-      <div class="item">
-        <img src="img/IMG_9677.JPG" alt="New Marcin-Mika-foto-3" >
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
- 	 </div>
-	</article>
-<!--pokaz slajdów ze szczytu strony-->
-	
-	<article>
-		
-		<h3>Front End Developer</h3>
-		<p>Jestem początkującym Front End Developerem. Mam doświadczenie w HTML, CSS, JavaScrip, które nabyłem przy robieniu projektów na BootCampie. </p>
-		
-		<p class="text-bold"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim similique possimus fugit minima beatae iste ut voluptatem obcaecati. Ducimus sit praesentium ex laborum deserunt. Debitis perspiciatis quidem deleniti eveniet maiores.</p>
-		
-	</article>
-	
-	</section>
-	
 	<section class="main-section">
-		
-		<article>
-		
-				<i class="fa fa-twitter" aria-hidden="true" style="font-size:60px"></i>
-				
-				<i class="fa fa-facebook" aria-hidden="true" style="font-size:60px"></i>
-		
+
+		<h1>Marcin Mika</h1>
+
+		<!--pokaz slajdów ze szczytu strony-->
+		<article class="container">
+			<div id="myCarousel" class="carousel slide" data-ride="carousel">
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#myCarousel" data-slide-to="1"></li>
+					<li data-target="#myCarousel" data-slide-to="2"></li>
+				</ol>
+
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner">
+					<div class="item active">
+						<img src="img/Marcin-Mika-foto-1.JPG" alt="Marcin-Mika-foto-1">
+					</div>
+
+					<div class="item">
+						<img src="img/IMG_9674.JPG" alt="Marcin-Mika-foto-2">
+					</div>
+
+					<div class="item">
+						<img src="img/IMG_9677.JPG" alt="New Marcin-Mika-foto-3">
+					</div>
+				</div>
+
+				<!-- Left and right controls -->
+				<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="right carousel-control" href="#myCarousel" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
 		</article>
-		
+		<!--pokaz slajdów ze szczytu strony-->
+
+		<article>
+
+			<h3>Front End Developer</h3>
+			<p>Jestem początkującym Front End Developerem. Mam doświadczenie w HTML, CSS, JavaScrip, które nabyłem przy robieniu projektów na BootCampie. </p>
+
+			<p class="text-bold"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim similique possimus fugit minima beatae iste ut voluptatem obcaecati. Ducimus sit praesentium ex laborum deserunt. Debitis perspiciatis quidem deleniti eveniet maiores.</p>
+
+		</article>
+
 	</section>
-	
-	
+
+	<section class="main-section">
+
+		<article>
+
+			<i class="fa fa-twitter" aria-hidden="true" style="font-size:60px"></i>
+
+			<i class="fa fa-facebook" aria-hidden="true" style="font-size:60px"></i>
+
+		</article>
+
+		<article>
+			<h3>UMIEJĘTNOŚCI</h3>
+
+			<p>Jestem początkującym Front End Developerem. Mam doświadczenie w HTML, CSS, JavaScrip, które nabyłem przy robieniu projektów na BootCampie. </p>
+
+			<p class="text-bold"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim similique possimus fugit minima beatae iste ut voluptatem obcaecati. Ducimus sit praesentium ex laborum deserunt. Debitis perspiciatis quidem deleniti eveniet maiores.</p>
+
+		</article>
+			
+		<article>
+				<br>
+				<br>
+				<br>
+			<h3>DOŚWIADCZENIE</h3>
+
+			<p>Jestem początkującym Front End Developerem. Mam doświadczenie w HTML, CSS, JavaScrip, które nabyłem przy robieniu projektów na BootCampie. </p>
+
+			<p class="text-bold"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim similique possimus fugit minima beatae iste ut voluptatem obcaecati. Ducimus sit praesentium ex laborum deserunt. Debitis perspiciatis quidem deleniti eveniet maiores.</p>
+
+		</article>
+
+	</section>
+
+
 	<section></section>
 	<section></section>
 
-	
+
 </body>
+
 </html>
