--- a/index.html
+++ b/index.html
@@ -85,19 +85,18 @@
 
 			<p>Jestem początkującym Front End Developerem. Mam doświadczenie w HTML, CSS, JavaScrip, które nabyłem przy robieniu projektów na BootCampie. </p>
 
-			<p class="text-bold"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim similique possimus fugit minima beatae iste ut voluptatem obcaecati. Ducimus sit praesentium ex laborum deserunt. Debitis perspiciatis quidem deleniti eveniet maiores.</p>
+			<p class="text-bold"> Poszukiwanie nowych rozwiązań i zastosowywanie ich w projektach; Praca w zespole; Praca pod presją czasu; Czytanie dokumentacji technicznej; Samodzielność w wykonywaniu pracy; Dyspozycyjność;
+			</p>
 
 		</article>
-			
+
 		<article>
-				<br>
-				<br>
-				<br>
+			<br>
 			<h3>DOŚWIADCZENIE</h3>
 
 			<p>Doświadczenie w programowaniu w językach HTML/CSS/JavaScript zdobywałem podczas studiów inżynierskich, kursu Frond End Developer oraz w pracy projektowej. Posługuję się technologiami SASS i GULP, korzystam z repozytorium GIT, implementuję proste rozwiązania bazodanowe.</p>
 
-			<p class="text-bold">  Mam doświadczenie w pracy z JQuery i Bootstrapem, potrafię debugować.  Analizuję i optymalizuję tworzony kod. Bardzo szybko uczę się nowych technologii, dlatego chętnie podejmuję nowe wyzwania.</p>
+			<p class="text-bold"> Mam doświadczenie w pracy z JQuery i Bootstrapem, potrafię debugować. Analizuję i optymalizuję tworzony kod. Bardzo szybko uczę się nowych technologii, dlatego chętnie podejmuję nowe wyzwania.</p>
 
 		</article>
 
