--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 			<p>Jestem początkującym Front End Developerem. Mam doświadczenie w HTML, CSS, JavaScrip, które nabyłem przy robieniu projektów na BootCampie. </p>
 
-			<p class="text-bold"> Poszukiwanie nowych rozwiązań i zastosowywanie ich w projektach; Praca w zespole; Praca pod presją czasu; Czytanie dokumentacji technicznej; Samodzielność w wykonywaniu pracy; Dyspozycyjność;
+			<p class="text-bold"> Poszukiwanie nowych rozwiązań i zastosowywanie ich w projektach | Praca w zespole | Praca pod presją czasu | Czytanie dokumentacji technicznej | Samodzielność w wykonywaniu pracy | Dyspozycyjność
 			</p>
 
 		</article>
