--- a/index.html
+++ b/index.html
@@ -103,7 +103,17 @@
 	</section>
 
 
-	<section></section>
+	<section>
+		
+		<form action="submit">
+			<i class="fa fa-envelope form-i" aria-hidden="true" style="font-size:30px"></i>
+			<input type="text" name="userName" placeholder="Enter your Emil">
+			<i class="fa fa-mobile form-i" aria-hidden="true" style="font-size:40px"></i>
+			<input type="password" name="password" placeholder="Enter your Phone number">
+			<button type="button" class="buttonColumn-2">Send</button>
+		</form>
+		
+	</section>
 	<section></section>
 
 
