--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 
 
 	<section>
-		
-		<form action="submit">
-			<i class="fa fa-envelope form-i" aria-hidden="true" style="font-size:30px"></i>
-			<input type="text" name="userName" placeholder="Enter your Emil">
-			<i class="fa fa-mobile form-i" aria-hidden="true" style="font-size:40px"></i>
-			<input type="password" name="password" placeholder="Enter your Phone number">
-			<button type="button" class="buttonColumn-2">Send</button>
+		<h3>KONTAKT</h3>
+		<form action="submit"> <br>
+			<i class="fa fa-envelope form-i" aria-hidden="true" style="font-size:30px"></i><br><br>
+			<input type="text" name="userName" placeholder="Enter your Emil"><br><br>
+			<i class="fa fa-mobile form-i" aria-hidden="true" style="font-size:40px"></i> <br><br>
+			<input type="password" name="password" placeholder="Enter your Phone number">	<br><br>
+			<button type="button" class="buttonColumn-2">Send</button><br><br>
 		</form>
 		
 	</section>
