--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
 			<i class="fa fa-envelope form-i" aria-hidden="true" style="font-size:30px"></i><br><br>
 			<input type="text" name="userName" placeholder="Enter your Emil"><br><br>
 			<i class="fa fa-mobile form-i" aria-hidden="true" style="font-size:40px"></i> <br><br>
-			<input type="password" name="password" placeholder="Enter your Phone number">	<br><br>
-			<button type="button" class="buttonColumn-2">Send</button><br><br>
+			<input type="password" name="password" placeholder="Enter your Phone number">	<br><br> 
+			<input class="checkBox-form" type="checkbox" name="zgoda" value="zgoda"> Proszę o kontakt mam dla Ciebie ofertę<br><br>
+			<button type="button" class="buttonColumn-2">Wyślij</button><br><br>
 		</form>
 		
 	</section>
