--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="fonts/facebook/css/font-awesome.min.css">
 	<link rel="stylesheet" href="fonts/tweeter/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
 
 
 </head>
@@ -74,9 +76,11 @@
 
 		<article>
 
-			<i class="fa fa-twitter" aria-hidden="true" style="font-size:60px"></i>
+			<i class="fa fa-twitter" aria-hidden="true" style="font-size:50px"></i>
+			
+			<i style="font-size:50px" class="fa">&#xf0e1;</i>
 
-			<i class="fa fa-facebook" aria-hidden="true" style="font-size:60px"></i>
+			<i class="fa fa-facebook" aria-hidden="true" style="font-size:50px"></i>
 
 		</article>
 
@@ -88,6 +92,13 @@
 			<p class="text-bold"> Poszukiwanie nowych rozwiązań i zastosowywanie ich w projektach | Praca w zespole | Praca pod presją czasu | Czytanie dokumentacji technicznej | Samodzielność w wykonywaniu pracy | Dyspozycyjność
 			</p>
 
+		</article>
+		
+		<article>
+			<i style="font-size:50px" class="fa">&#xf13c;</i>
+			<i style="font-size:50px" class="fa">&#xf13b;</i>
+			<i style="font-size:50px" class="fa">&#xf17c;</i>
+			<i style="font-size:50px" class="fa">&#xf19a;</i>
 		</article>
 
 		<article>
@@ -107,9 +118,9 @@
 		<h3>KONTAKT</h3>
 		<form action="submit"> <br>
 			<i class="fa fa-envelope form-i" aria-hidden="true" style="font-size:30px"></i><br><br>
-			<input type="text" name="userName" placeholder="Enter your Emil"><br><br>
+			<input type="email" name="email" placeholder="Enter your Emil"><br><br>
 			<i class="fa fa-mobile form-i" aria-hidden="true" style="font-size:40px"></i> <br><br>
-			<input type="password" name="password" placeholder="Enter your Phone number">	<br><br> 
+			<input type="tel" name="tel" placeholder="Enter your Phone number">	<br><br> 
 			<input class="checkBox-form" type="checkbox" name="zgoda" value="zgoda"> Proszę o kontakt mam dla Ciebie ofertę<br><br>
 			<button type="button" class="buttonColumn-2">Wyślij</button><br><br>
 		</form>
