--- a/index.html
+++ b/index.html
@@ -76,11 +76,7 @@
 
 		<article>
 
-			<i class="fa fa-twitter" aria-hidden="true" style="font-size:50px"></i>
-			
-			<i style="font-size:50px" class="fa">&#xf0e1;</i>
 
-			<i class="fa fa-facebook" aria-hidden="true" style="font-size:50px"></i>
 
 		</article>
 
@@ -116,10 +112,15 @@
 
 	<section>
 		<h3>KONTAKT</h3>
-		<form action="submit"> <br>
-			<i class="fa fa-envelope form-i" aria-hidden="true" style="font-size:30px"></i><br><br>
+					<i class="fa fa-twitter" aria-hidden="true" style="font-size:50px"></i>
+			
+			<i style="font-size:50px" class="fa">&#xf0e1;</i>
+
+			<i class="fa fa-facebook" aria-hidden="true" style="font-size:50px"></i>
+		<form action="submit"> 
+			<i class="fa fa-envelope form-i" aria-hidden="true" style="font-size:30px"></i>
 			<input type="email" name="email" placeholder="Enter your Emil"><br><br>
-			<i class="fa fa-mobile form-i" aria-hidden="true" style="font-size:40px"></i> <br><br>
+			<i class="fa fa-mobile form-i" aria-hidden="true" style="font-size:40px"></i>
 			<input type="tel" name="tel" placeholder="Enter your Phone number">	<br><br> 
 			<input class="checkBox-form" type="checkbox" name="zgoda" value="zgoda"> Proszę o kontakt mam dla Ciebie ofertę<br><br>
 			<button type="button" class="buttonColumn-2">Wyślij</button><br><br>
