znikanie trescie po wyslaniu formularza

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="fonts/facebook/css/font-awesome.min.css">
 	<link rel="stylesheet" href="fonts/tweeter/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -123,13 +124,14 @@
 			<i class="fa fa-mobile form-i" aria-hidden="true" style="font-size:40px"></i>
 			<input type="tel" name="tel" placeholder="Enter your Phone number">	<br><br> 
 			<input class="checkBox-form" type="checkbox" name="zgoda" value="zgoda"> Proszę o kontakt mam dla Ciebie ofertę<br><br>
+			<p>Wyślij swoje dane</p>
 			<button type="button" class="buttonColumn-2">Wyślij</button><br><br>
 		</form>
 		
 	</section>
 	<section></section>
 
-
+<script src="js/animacja-button.js"></script>
 </body>
 
 </html>
